# xfvcom

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  cleanup_repo.sh  environment.yml  extract_fvcom_boundary.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh
.github/workflows/: build-inputs.yml  ci.yml
docs/: CONTRIBUTING.md  DOCUMENTATION_UPDATES.md  EXAMPLES_DOCUMENTATION_UPDATE.md  api.rst  conf.py  forcing_generator.md  index.rst  plot_2d.md  plot_section.md  plot_ts.md  plotting.md  usage.rst
docs/development/: AUTO_COLORMAP_SELECTION_2025-10-16.md  CELL13_FIX.md  COLORMAP_OPTIONS_30PLUS_MEMBERS.md  COLOR_STANDARDIZATION_2025-10-16.md  COMPLETE_SUMMARY_2025-10-16.md  DIMENSION_TRANSPOSE_FIX.md  FINAL_FIX_REPORT.md  FIXES_APPLIED_2025-10-16.md  GROUNDWATER_FLUX_UNITS_CORRECTION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MEDIAN_DUAL_IMPLEMENTATION_REPORT.md  PATH_ABSOLUTE_CHANGE_2025-10-16.md  SIMPLE_STACKED_PLOT.md  STACKING_ORDER_FIX_2025-10-16.md  SUMMARY_COLOR_ENHANCEMENT_2025-10-16.md  VERIFICATION_COMPLETE.md  WORK_SUMMARY_2025-10-13.md
examples/: Ex1_plot_2d.ipynb  README.md  README_DYE_TIMESERIES.md  README_groundwater.md  add_dye_to_groundwater.py  arakawa_flux.csv  chn_gw_const.nml  create_2d.ipynb  create_anim_2d.ipynb  create_anim_2d.py  create_gif_anim.ipynb  create_gif_anim_2d.ipynb  create_gif_anim_2d.py  create_gif_anim_2d_from_frames.py  create_groundwater_netcdf.py  create_groundwater_timeseries.py  demo_nctoolkit.ipynb  dev_check_netcdf.ipynb  dev_fvcom2d.ipynb  dev_fvcom_grid.ipynb  dev_fvcom_mpos.ipynb  dev_plot_netcdf.ipynb  dye_timeseries_cli.py  extract_member_node_mapping.py  forcing_generator.ipynb  fvcom_mpos.ipynb  generate_groundwater.py  groundwater_advanced_config.yaml  groundwater_cli_example.sh  groundwater_cli_examples.md  groundwater_config.yml  groundwater_data.csv  groundwater_generator.ipynb  groundwater_namelist.nml  groundwater_timeseries_auto.yaml  groundwater_timevar.yml  input_river.ipynb  manual_test_cli_parse.py  manual_test_parse.py  mpos_fvcom.ipynb  (+10 more)
examples/configs/: groundwater_timeseries_config.yaml  rivers_minimal.nml
examples/data/: sample_sjis.tsv
examples/notebooks/: Ex1_plot_2d.ipynb  QUICK_REFERENCE.md  create_2d.ipynb  create_anim_2d.ipynb  demo_dye_timeseries.ipynb  demo_member_node_mapping.ipynb  demo_nctoolkit.ipynb  demo_node_checker.ipynb  demo_river_input_checker.ipynb  demo_river_ts_extender.ipynb  dev_fvcom2d.ipynb  dev_fvcom_grid.ipynb  forcing_generator.ipynb  fvcom_mpos.ipynb  groundwater_generator.ipynb  input_river.ipynb  obc_dye.ipynb  plot_chn.ipynb  plot_inout.ipynb  river_input_checker.ipynb  river_timeseries_extender.ipynb
examples/notebooks/archive/: arch_river_input_checker.ipynb  arch_river_ts_extender.ipynb  arch_river_ts_extender_simple.ipynb
tests/: conftest.py  pytest-import-graph.py  test_draw_scalar.py  test_dye_timeseries_stacked.py  test_element_area.py  test_forcing_writer.py  test_groundwater_nc_generator.py  test_helpers.py  test_helpers_extended.py  test_helperspy  test_import_graph.py  test_median_dual_areas.py  test_mesh_coast_obc_regression.py  test_met_nc_generator  test_met_nc_generator.py  test_node_area.py  test_node_boundaries.py  test_node_marker_cart.py  test_options_postinit.py  test_plot2d_vec.py  test_plot_config.py  test_plot_marker_clipping.py  test_plot_mesh_only.py  test_plot_siglay_error.py  test_prepare_axis_regression.py  test_river_cli_mixed.py  test_river_cli_options.py  test_river_generator.py  test_river_interp_error.py  test_river_missing_nml.py  test_river_nc_generator.py  test_river_nml_generator.py  test_river_priority.py  test_river_yaml_file.py  test_scalar_cart_regression.py  test_scalar_no_attrs.py  test_scalar_reduce.py  test_scalar_vector_regression.py  test_timeseries_source.py
tests/data/: arakawa_flux.csv  global_temp.tsv  river_cfg.yaml  rivers.csv  rivers_expected.nml  rivers_minimal.nml
xfvcom/: __init__.py  analysis.py  decorators.py  dye_timeseries.py  helpers.py  helpers_utils.py  io.py  mypy.ini  plot_options.py  plot_utils.py  xfvcom.py
xfvcom/cli/: dye_timeseries.py  make_groundwater_nc.py  make_met_nc.py  make_river_nc.py  make_river_nml.py
xfvcom/ensemble_analysis/: __init__.py  member_info.py
xfvcom/grid/: __init__.py  dat_reader.py  geo_utils.py  grid_obj.py
xfvcom/io/: __init__.py  base_generator.py  core.py  forcing_writer.py  grid_reader.py  groundwater_nc_generator.py  input_loader.py  met_nc_generator.py  netcdf_utils.py  nml_parser.py  river_nc_generator.py  river_nml.py  river_nml_generator.py  rivers_nml_parser.py
xfvcom/io/sources/: base.py  timeseries.py  utils.py
xfvcom/io/templates/: river_namelist.j2
xfvcom/plot/: __init__.py  _timeseries_utils.py  boundaries.py  config.py  core.py  dye_timeseries.py  markers.py  plotly_utils.py  timeseries.py  utils.py
xfvcom/utils/: __init__.py  decorators.py  helpers.py  helpers_utils.py  time_utils.py  timeseries_utils.py
