# pyproject.toml  ── fully valid TOML 1.0

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xfvcom"
version = "0.2.0"
description = "Visualisation utilities for FVCOM outputs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Jun Sasaki", email = "jsasaki.ece@gmail.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy>=1.24",
  "xarray>=2023.11",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "cartopy>=0.22",
  "pyproj>=3.6",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "imageio>=2.34",
  "moviepy>=1.0.3", 
  "imageio-ffmpeg>=0.4",
  "tqdm>=4.66",
]

[project.optional-dependencies]
video = ["moviepy>=1.0.3", "imageio-ffmpeg>=0.4"]
dev = [
  "pytest>=8.1",
  "mypy>=1.7",
  "black>=24.2",
  "isort>=5.13",
  "types-tqdm>=4.66",
  "pandas-stubs",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xfvcom*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
skip_glob = ["**/.ipynb_checkpoints/*"]

[tool.mypy]
strict = true
explicit_package_bases = true
ignore_missing_imports = true
no_implicit_optional = true
