# pyproject.toml  ── fully valid TOML 1.0

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xfvcom"
version = "0.2.0"
description = "Visualisation utilities for FVCOM outputs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Jun Sasaki", email = "jsasaki.ece@gmail.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy>=2.0.0",
  "xarray>=2024.12.0",
  "pandas>=2.2.2",
  "matplotlib>=3.9.1",
  "cartopy>=0.24.0",
  "pyproj>=3.6.1",
  "scipy>=1.14.0",
  "scikit-learn>=1.5.1",
  "imageio>=2.36.1",
  "moviepy>=1.0.3", 
  "imageio-ffmpeg>=0.6.0",
  "tqdm>=4.66.8",
  "jinja2>=3.1.4",
  "PyYAML>=6.0.1",
  "netCDF4>=1.7.1",
  "h5netcdf>=1.3.0",
  "cftime>=1.6.4",
  "chardet>=5.2.0", 
]

[project.optional-dependencies]
video = ["moviepy>=1.0.3", "imageio-ffmpeg>=0.6.0"]
dev = [
  "pytest>=8.3.2",
  "mypy>=1.17.1",
  "black>=25.1.0",
  "isort>=6.0.1",
  "types-tqdm>=4.66.8",
  "pandas-stubs>=2.2.2",
  "matplotlib>=3.9.1",
  "ruff>=0.3",
  "types-PyYAML>=6.0.12",
  "ipykernel>=6.29.5",
  "jupyterlab>=4.2.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xfvcom*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
skip_glob = ["**/.ipynb_checkpoints/*"]

[tool.mypy]
strict = true
strict_optional = true
explicit_package_bases = true
ignore_missing_imports = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[project.scripts]
xfvcom-make-river-nml = "xfvcom.cli.make_river_nml:main"
xfvcom-make-river-nc = "xfvcom.cli.make_river_nc:main"
xfvcom-make-met-nc = "xfvcom.cli.make_met_nc:main"
xfvcom-make-groundwater-nc = "xfvcom.cli.make_groundwater_nc:main"